Fixed spacing issues with width

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -61,7 +61,7 @@ a:hover {
 }
 .main-nav {
 	display: flex;
-	width: 100vw;
+	width: 100%;
 	padding: 25px;
 	justify-content: space-between;
 	flex-wrap: wrap;
@@ -199,7 +199,7 @@ a:hover {
 
 .main-nav_footer {
 	display: flex;
-	width: 100vw;
+	width: 100%;
 	padding: 25px;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
@@ -213,7 +213,7 @@ a:hover {
 	.navigation_bar-right {
 		display: none;
 		flex-direction: column;
-
+		margin: 0 auto;
 		width: 100vw;
 		/* flex-wrap: wrap; */
 	}
@@ -232,8 +232,8 @@ a:hover {
 		justify-content: center;
 		align-items: center;
 		max-width: 100%;
-		/* flex-wrap: wrap; */
 		height: 100%;
+		margin: 0 auto;
 	}
 
 	#faeb8569-86d6-4ca8-aa1a-15c8989ac122 {
@@ -244,24 +244,33 @@ a:hover {
 		display: flex;
 		width: 100%;
 		flex-direction: column;
+		margin: 0 auto;
+	}
+	.btn-cta {
+		width: 90vw;
 	}
 
+	.btn-cta:hover {
+		background-color: var(--color-prim);
+		color: var(--color-cta);
+	}
 	.card-p {
 		border-bottom: 1px solid var(--color-cta);
-		/* width: 100%; */
 	}
 	.philosophy {
 		display: flex;
-		height: 100%;
+		margin: 0 auto;
+		max-width: 100vw;
 		flex-direction: column;
 	}
 
 	#bb5e65c7-a306-47bb-829f-a7ac48d31837 {
-		width: 500px;
+		width: 400px;
 	}
 	.main-nav {
 		display: flex;
 		flex-direction: row;
 		align-items: center;
+		margin: 0 auto;
 	}
 }
